--- a/style.css
+++ b/style.css
@@ -5,12 +5,10 @@ body{
 html{
     font-size: 62.5%;
 }
-
-.navBar{
+nav{
     display: flex;
     justify-content: left;
     margin-left: 5%;
-   
 }
 h1{
     margin-left: 5%;
@@ -110,5 +108,14 @@ button{
 @media(max-width:500px){
     body{
         background-color: yellowgreen;
+    }
+    nav{
+        flex-direction:column;
+        align-items: center;
+    }
+    h1{
+        display: flex;
+        flex-direction:column;
+        align-items: center;
     }
 }
