--- a/style.css
+++ b/style.css
@@ -118,4 +118,12 @@ button{
         flex-direction:column;
         align-items: center;
     }
+    .mainTeam{
+        width:100%
+    }
+    .main img {
+        height: 300px;
+        width: 200px;
+        padding: 20px;
+    }
 }
